--- a/src/components/sass/styles.scss
+++ b/src/components/sass/styles.scss
@@ -1,4 +1,8 @@
-
 @import './_config.scss';
 @import './_header.scss';
-@import './logementsFile';
+@import './_cards.scss';
+@import './_logementFile.scss';
+@import './_collapse.scss';
+@import './_apropos.scss';
+@import './_footer.scss';
+@import './_error.scss';
