--- a/src/components/sass/_config.scss
+++ b/src/components/sass/_config.scss
@@ -4,10 +4,18 @@
   box-sizing: border-box;
 }
 
-.body {
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 
+body {
   margin: 0 auto;
+  padding: 0;
   font-family: 'Montserrat', sans-serif;
+}
+
+.body {
+  margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
