--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -4,54 +4,286 @@
   box-sizing: border-box;
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0 auto;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
 .body {
   margin: 0 auto;
-  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-grow: 1;
 }
 
-* {
-  font-family: "Montserrat";
-}
-
 .header {
-  width: auto;
-  height: 68px;
-  margin: 40px;
+  color: black;
+  text-align: right;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  max-width: 1240px;
+  margin: auto;
+  padding: 40px 0;
 }
 
 .kasa-logo-img {
   height: 68px;
-  width: 210px;
 }
 
 .nav-bar {
-  width: 309px;
-  height: 34px;
+  padding-left: 32px;
+  list-style: none;
   display: flex;
-  justify-content: space-evenly;
-}
-
-.text {
   font-size: 24px;
-  width: 116px;
+}
+.nav-bar a {
+  height: 34px;
+  width: 136px;
   text-decoration: none;
   color: #FF6060;
+}
+.nav-bar a :hover {
+  border-bottom: 2px solid #FF6060;
+  cursor: pointer;
 }
 
-a {
-  text-decoration: none;
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1240px;
+  margin: 0 auto;
 }
-a :hover {
-  text-decoration: underline;
+
+.images_gallery {
+  background: #F7F7F7;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  border-radius: 25px;
+  width: 100%;
+  padding-top: 20px;
+  margin-top: 30px;
+}
+.images_gallery a {
+  width: 340px;
+  height: 340px;
+  margin: 20px 15px;
+}
+
+.key-box {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  border-radius: 10px;
+  z-index: 1;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.key-box:hover {
+  cursor: pointer;
+  box-shadow: 5px 5px 10px #7a7a80;
+}
+
+.title-box {
+  position: absolute;
+  left: 5.88%;
+  bottom: 17px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 142.6%;
+  display: flex;
+  align-items: flex-end;
+  color: white;
+}
+
+.kasa-body {
+  width: 100%;
+}
+
+.banner-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.banner-img p {
+  color: white;
+  font-size: 48px;
+  display: flex;
+  width: 100%;
+  height: 220px;
+  background-position: center;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.3019607843);
+  background-blend-mode: darken;
+}
+
+.accordion {
+  margin: 0 auto;
+  max-width: 1120px;
+  margin-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.accordion-title {
+  height: 15px;
+  font-weight: 500;
+  font-weight: bold;
+  font-size: 24px;
+  padding: 25px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #FF6060;
+  color: #FFFFFF;
+}
+.accordion-title :hover {
+  cursor: pointer;
+}
+
+.accordion-content {
+  visibility: hidden;
+  height: auto;
+  opacity: 0;
+  overflow: hidden;
+  padding: 0 1rem;
+  transition: all 0.15s ease-in;
+}
+
+.active .accordion-content {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
   color: #FF6060;
+  background-color: #f7f7f7;
+  margin-bottom: 31px;
+  border-radius: 5px;
+  opacity: 1;
+  transition: 0.3s;
+  padding: 1rem;
+  overflow: visible;
+  visibility: visible;
+}
+.active .accordion-content :hover {
+  cursor: pointer;
+}
+
+.active i {
+  transition: 0.5s;
+}
+
+.false i {
+  transform: rotate(180deg);
+  transition: 0.3s;
+}
+
+.collapse-container {
+  display: flex;
+  flex-direction: column;
+  width: 48%;
+  justify-content: flex-start;
+}
+
+.collapse-container div {
+  border-radius: 10px;
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  border-radius: 25px;
+  margin-bottom: 50px;
+  width: 90%;
+  max-width: 1240px;
+  height: 223px;
+  background: url("../assets/banner2.png");
+  background-position: center;
+  background-size: cover;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
+  -webkit-filter: brightness(70%);
+  filter: brightness(70%);
+}
+
+.footer {
+  width: auto;
+  height: 160px;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-text {
+  width: 513px;
+  height: 46px;
+  font-size: 24px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 6px;
+}
+
+.logo-kasa-footer {
+  width: 122px;
+  height: 40px;
+  filter: brightness(5);
+}
+
+.error {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error_title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 264px;
+  font-size: 288px;
+  font-weight: 700;
+  color: #FF6060;
+  margin-top: 166px;
+  margin-bottom: 58px;
+}
+
+.error_text {
+  font-size: 36px;
+  width: auto;
+  height: 52px;
+  color: #FF6060;
+  margin-bottom: 168px;
+}
+
+.errorBack {
+  font-size: 18px;
+  color: #FF6060;
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=App.css.map */
