--- a/src/sass/_collapse.scss
+++ b/src/sass/_collapse.scss
@@ -62,7 +62,7 @@
 .collapse-container {
   display: flex;
   flex-direction: column;
-  width: 48%;
+  width: auto;
   justify-content: flex-start;
 }
 
