--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,6 @@
 @import './_config.scss';
 @import './_header.scss';
+@import './banner';
 @import './_cards.scss';
 @import './_logementFile.scss';
 @import './_collapse.scss';
