--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,6 +54,30 @@ body {
   cursor: pointer;
 }
 
+.kasa-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.banner-img {
+  max-width: 1240px;
+  color: white;
+  font-size: 48px;
+  display: flex;
+  width: 100%;
+  height: 220px;
+  background-position: center;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.3019607843);
+  background-blend-mode: darken;
+  margin-bottom: 50px;
+}
+
 .gallery {
   display: flex;
   flex-direction: row;
@@ -120,6 +144,7 @@ body {
 }
 
 .banner-img p {
+  max-width: 1240px;
   color: white;
   font-size: 48px;
   display: flex;
@@ -199,7 +224,7 @@ body {
 .collapse-container {
   display: flex;
   flex-direction: column;
-  width: 48%;
+  width: auto;
   justify-content: flex-start;
 }
 
@@ -213,7 +238,6 @@ body {
   margin: 0 auto;
   border-radius: 25px;
   margin-bottom: 50px;
-  width: 90%;
   max-width: 1240px;
   height: 223px;
   background: url("../assets/banner2.png");
