--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -5,21 +5,42 @@
 
 }
   
-.banner-img {
-    max-width: 1240px;
-    color: white;
-    font-size: 48px;
+.banner {
+    position: relative;
+    max-width: 1240px;    
+
     display: flex;
     width: 100%;
     height: 220px;
-    background-position: center;
-    object-fit: cover;
     justify-content: center;
     align-items: center;
     border-radius: 25px;
-    background-size: cover;
-    background-color: #0000004d;
-    background-blend-mode: darken;
-    
     margin-bottom: 50px;
+    overflow: hidden;
+    &::after {
+        position: absolute;
+        content: '';
+        inset: 0;
+        background: #000;
+        mix-blend-mode: darken;
+        opacity: 0.3;
+        z-index: 1;
+    }
+}
+
+.banner-img {
+    position: absolute;
+    inset: 0;
+    background-position: center;
+    background-size: cover;
+}
+
+.banner-text {
+    position: absolute;
+    font-size: 40px;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
