--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,8 +1,8 @@
 @import './_config.scss';
 @import './_header.scss';
-@import './banner';
-@import './_cards.scss';
-@import './_logementFile.scss';
+@import './_banner';
+@import './_home.scss';
+@import './_logement.scss';
 @import './_collapse.scss';
 @import './_apropos.scss';
 @import './_footer.scss';
