--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,22 +60,43 @@ body {
   justify-content: center;
 }
 
-.banner-img {
+.banner {
+  position: relative;
   max-width: 1240px;
-  color: white;
-  font-size: 48px;
   display: flex;
   width: 100%;
   height: 220px;
-  background-position: center;
-  object-fit: cover;
   justify-content: center;
   align-items: center;
   border-radius: 25px;
-  background-size: cover;
-  background-color: rgba(0, 0, 0, 0.3019607843);
-  background-blend-mode: darken;
   margin-bottom: 50px;
+  overflow: hidden;
+}
+.banner::after {
+  position: absolute;
+  content: "";
+  inset: 0;
+  background: #000;
+  mix-blend-mode: darken;
+  opacity: 0.3;
+  z-index: 1;
+}
+
+.banner-img {
+  position: absolute;
+  inset: 0;
+  background-position: center;
+  background-size: cover;
+}
+
+.banner-text {
+  position: absolute;
+  font-size: 40px;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .gallery {
@@ -135,29 +156,6 @@ body {
 
 .kasa-body {
   width: 100%;
-}
-
-.banner-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.banner-img p {
-  max-width: 1240px;
-  color: white;
-  font-size: 48px;
-  display: flex;
-  width: 100%;
-  height: 220px;
-  background-position: center;
-  object-fit: cover;
-  justify-content: center;
-  align-items: center;
-  border-radius: 25px;
-  background-size: cover;
-  background-color: rgba(0, 0, 0, 0.3019607843);
-  background-blend-mode: darken;
 }
 
 .accordion {
@@ -230,24 +228,6 @@ body {
 
 .collapse-container div {
   border-radius: 10px;
-}
-
-.banner {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  border-radius: 25px;
-  margin-bottom: 50px;
-  max-width: 1240px;
-  height: 223px;
-  background: url("../assets/banner2.png");
-  background-position: center;
-  background-size: cover;
-  object-fit: cover;
-  justify-content: center;
-  align-items: center;
-  -webkit-filter: brightness(70%);
-  filter: brightness(70%);
 }
 
 .footer {
