--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -288,6 +288,7 @@ body {
   font-size: 18px;
   color: #FF6060;
   text-decoration: underline;
+  padding-bottom: 25px;
 }
 
 /*# sourceMappingURL=App.css.map */
