--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -1,45 +1,114 @@
 .kasa-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
   
 .banner {
-    position: relative;
-    max-width: 1240px;    
-    display: flex;
-    width: 100%;
-    height: 220px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    margin-bottom: 50px;
-    overflow: hidden;
-    &::after {
-        position: absolute;
-        content: '';
-        inset: 0;
-        background: #000;
-        mix-blend-mode: darken;
-        opacity: 0.3;
-        z-index: 1;
-    }
+  position: relative;  
+  display: flex;
+  width: 100%;
+  height: 223px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  margin-top: 50px;
+  margin-bottom: 43px;
+  overflow: hidden;
+  &::after {
+    position: absolute;
+    content: '';
+    inset: 0;
+    background: #000;
+    mix-blend-mode: darken;
+    opacity: 0.3;
+    z-index: 1;
+  }
 }
 
 .banner-img {
-    position: absolute;
-    inset: 0;
-    background-position: center;
-    background-size: cover;
+  position: absolute;
+  inset: 0;
+  background-position: center;
+  background-size: cover;
 }
 
 .banner-text {
-    position: absolute;
-    font-size: 40px;
-    color: #fff;
+  position: absolute;
+  font-size: 40px;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+@media screen and (280px <= width <= 375px) {
+  .banner {
+    width: 100%;
+    height: 111px;
+    margin: 0 20px;
+  }
+  .banner-text {
+    width: 217px;
+    font-size: 24px;
+    top: 37%;
+    left: 25%;
+    transform: translate(-30%, -25%);
+  }
+  .kasa-body {
+    height: 80%;
+    margin-bottom: 22px;
+  }
+}
+
+@media screen and (376px <= width <= 768px) {
+  .kasa-body {
+    margin-bottom: 22px;
+  }
+  .banner {
+    height: 111px;
+    width: 100%;
+    margin: 0 20px;
+  }
+  .banner-text {
+    width: 217px;
+    font-size: 24px;
+    top: 37%;
+    left: 25%;
+    transform: translate(-30%, -25%);
+  }
+  .footer-banner-image .banner-image{
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+@media screen and (768px <= width <= 992px) { 
+  .banner {
+    width: 96%;
+    height: 111px;
+    margin: 20px;
+  }
+  .banner-text {
+    width: auto;
+    font-size: 26px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+  }
+}
+
+@media screen and (992px <= width <= 1200px) {
+  .banner {
+    height: 111px;
+    margin: 0 20px;
+  }
+  .banner-text {
+    width: auto;
+    font-size: 26px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
