--- a/src/sass/_collapse.scss
+++ b/src/sass/_collapse.scss
@@ -7,6 +7,7 @@
 }
 
 .accordion-title {
+  width:auto;
   height: 15px;
   font-weight: 500;
   font-weight: bold;
@@ -25,11 +26,11 @@
 
 .accordion-content {
   visibility: hidden;
-  height: auto;
   opacity: 0;
   overflow: hidden;
   padding: 0 1rem;
   transition: all .15s ease-in;
+  display: none;
 }
 
 .active .accordion-content {
@@ -55,8 +56,8 @@
 }
 
 .false i {
-  transform: rotate(180deg);
-  transition: 0.3s;
+    transform: rotate(180deg);
+    transition: 0.3s;
 }
 
 .collapse-container {
@@ -64,8 +65,54 @@
   flex-direction: column;
   width: auto;
   justify-content: flex-start;
+  margin-bottom: 30px;
 }
 
 .collapse-container div {
   border-radius: 10px;
+}
+
+@media screen and (280px <= width <= 376px) {
+  
+}
+
+@media screen and (768px >= width) {
+  .accordion {
+    width: 90%;
+    margin: 0 20px;
+    margin-bottom: 347px;    
+  }
+
+  .collapse-container {
+    height: auto;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .accordion-title {
+    padding: 6px 12px;
+    font-size: 13px;
+  }
+}
+
+@media screen and (768px <= width <= 992px) {
+  .accordion {
+    width: 96%;
+    margin: 0 20px;
+    margin-bottom: 20px;    
+  }
+
+
+
+  .accordion-title {
+    padding: 6px 12px;
+    font-size: 13px;
+  }
+}
+
+@media screen and (992px <= width <= 1200px ) {
+  .accordion {
+    height: auto;
+    margin-top: 32px;
+  }
 }
