--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,26 +1,32 @@
 .footer {
-    width: auto;
-    height: 160px;
-    background-color: #000000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 160px;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-text {
-    width: 513px;
-    height: 46px;
-    font-size: 24px;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 6px;
+  width: 100%;
+  height: 46px;
+  font-size: 24px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 6px;
 }
 
 .logo-kasa-footer {
-    width: 122px;
-    height: 40px;
-    filter: brightness(5);
+  width: 122px;
+  height: 40px;
+  filter: brightness(5);
+}
+
+@media screen and (280px <= width <= 992px) {
+  .footer-text {
+    font-size: 12px;
+  }
 }
