--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,6 +3,8 @@
 @import './_banner';
 @import './_home.scss';
 @import './_logement.scss';
+@import './apropos';
+@import './slideshow';
 @import './_collapse.scss';
 @import './_footer.scss';
 @import './_error.scss';
