--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,8 +29,8 @@ body {
   justify-content: space-between;
   align-items: center;
   max-width: 1240px;
-  margin: auto;
-  padding: 40px 0;
+  margin: 40px auto 0 auto;
+  width: 100%;
 }
 
 .kasa-logo-img {
@@ -54,6 +54,73 @@ body {
   cursor: pointer;
 }
 
+@media screen and (280px <= width <= 375px) {
+  .header {
+    width: 88%;
+    margin: 20px;
+    justify-content: center;
+  }
+  .nav-bar {
+    flex-direction: column;
+    font-size: 12px;
+  }
+  .nav-bar a {
+    height: 26px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .kasa-logo-img {
+    width: 90%;
+    height: auto;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+@media screen and (376px <= width <= 768px) {
+  .header {
+    width: 93.5%;
+    margin: 20px;
+  }
+  .header ul {
+    margin: 0;
+  }
+  .header ul a {
+    margin-left: 10px;
+    font-size: 18px;
+  }
+  .header a {
+    width: auto;
+    height: 100%;
+  }
+  .kasa-logo-img {
+    width: 145px;
+    height: 100%;
+  }
+}
+@media screen and (769px <= width <= 992px) {
+  .header {
+    width: auto;
+    height: 47px;
+    margin: 20px;
+    list-style: none;
+    font-size: 16px;
+  }
+  .header a {
+    width: auto;
+    height: 17px;
+    margin-right: 10px;
+  }
+  .kasa-logo-img {
+    width: 145px;
+    height: 47px;
+  }
+}
+@media screen and (993px <= width) {
+  .header {
+    width: auto;
+  }
+}
 .kasa-body {
   display: flex;
   align-items: center;
@@ -62,14 +129,14 @@ body {
 
 .banner {
   position: relative;
-  max-width: 1240px;
   display: flex;
   width: 100%;
-  height: 220px;
+  height: 223px;
   justify-content: center;
   align-items: center;
   border-radius: 25px;
-  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 43px;
   overflow: hidden;
 }
 .banner::after {
@@ -99,13 +166,82 @@ body {
   z-index: 2;
 }
 
+@media screen and (280px <= width <= 375px) {
+  .banner {
+    width: 100%;
+    height: 111px;
+    margin: 0 20px;
+  }
+  .banner-text {
+    width: 217px;
+    font-size: 24px;
+    top: 37%;
+    left: 25%;
+    transform: translate(-30%, -25%);
+  }
+  .kasa-body {
+    height: 80%;
+    margin-bottom: 22px;
+  }
+}
+@media screen and (376px <= width <= 768px) {
+  .kasa-body {
+    margin-bottom: 22px;
+  }
+  .banner {
+    height: 111px;
+    width: 100%;
+    margin: 0 20px;
+  }
+  .banner-text {
+    width: 217px;
+    font-size: 24px;
+    top: 37%;
+    left: 25%;
+    transform: translate(-30%, -25%);
+  }
+  .footer-banner-image .banner-image {
+    width: 100%;
+    object-fit: cover;
+  }
+}
+@media screen and (768px <= width <= 992px) {
+  .banner {
+    width: 96%;
+    height: 111px;
+    margin: 20px;
+  }
+  .banner-text {
+    width: auto;
+    font-size: 26px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+@media screen and (992px <= width <= 1200px) {
+  .banner {
+    height: 111px;
+    margin: 0 20px;
+  }
+  .banner-text {
+    width: auto;
+    font-size: 26px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+.container {
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
 .gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  max-width: 1240px;
-  margin: 0 auto;
 }
 
 .images_gallery {
@@ -118,6 +254,7 @@ body {
   width: 100%;
   padding-top: 20px;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 .images_gallery a {
   width: 340px;
@@ -158,6 +295,339 @@ body {
   width: 100%;
 }
 
+@media screen and (768px >= width) {
+  .images_gallery {
+    background-color: #ffffff;
+    justify-content: space-evenly;
+    border-radius: 25px;
+    padding: 0;
+    margin: 0;
+  }
+  .images_gallery a {
+    width: 94%;
+    height: 255px;
+    margin: 0 20px 20px 20px;
+  }
+}
+@media screen and (768px <= width <= 992px) {
+  .images_gallery {
+    background-color: #ffffff;
+  }
+  .images_gallery a {
+    height: 255px;
+    margin: 20px;
+  }
+  .key-box {
+    width: auto;
+  }
+  .kasa-body {
+    width: 100%;
+  }
+}
+.container-logement {
+  margin-top: 30px;
+}
+
+.container-logement-info {
+  max-width: 1240px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.logement-info h1 {
+  margin: 0;
+  font-size: 36px;
+  color: #FF6060;
+}
+.logement-info h2 {
+  font-size: 18px;
+  color: #FF6060;
+}
+
+.tag {
+  display: flex;
+  font-size: 14px;
+  text-align: center;
+  margin-right: 10px !important;
+  margin: 15px 0;
+}
+
+.container-tag {
+  padding: 5px 20px;
+  width: auto;
+  height: auto;
+  border-radius: 10px;
+  background: #FF6060;
+  display: flex;
+  color: #ffffff;
+  margin: 15px 10px 15px 0;
+  text-align: center;
+}
+
+.logement-host-name-picture {
+  width: 160px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.host-picture {
+  height: 64px;
+  width: 64px;
+  background-color: #C4C4C4;
+  border-radius: 50px;
+}
+
+.logement-host-name {
+  width: 64px;
+  padding-right: 10px;
+  color: #FF6060;
+  width: auto;
+  text-align: right;
+}
+
+.logement-rating {
+  margin-top: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.logement-collapse {
+  margin: auto;
+  max-width: 1240px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 100px;
+}
+.logement-collapse .accordion-title {
+  font-size: 18px;
+  padding: 15px;
+  width: 560px;
+}
+.logement-collapse .accordion-content {
+  width: 549px;
+}
+
+@media screen and (280px <= width <= 376px) {
+  .logement-collapse {
+    width: 92%;
+  }
+  .logement-collapse .accordion-content {
+    width: 98%;
+  }
+}
+@media screen and (768px >= width) {
+  .container-logement {
+    margin-top: 0;
+  }
+  .container-logement-info {
+    flex-direction: column;
+  }
+  .container-logement {
+    margin: 0 20px;
+    margin-top: 15px;
+    margin-bottom: 150px;
+  }
+  .logement-info h1 {
+    margin: 0;
+    font-size: 18px;
+    max-width: 90%;
+  }
+  .logement-info h2 {
+    font-size: 14px;
+  }
+  .container-tag {
+    font-size: 10px;
+  }
+  .tag {
+    margin-top: 10px;
+  }
+  .container-more-info {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  .host-picture {
+    height: 32px;
+    width: 32px;
+  }
+  .logement-host-name {
+    font-size: 12px;
+  }
+  .logement-rating {
+    margin: 0;
+  }
+  .logement-host-name-picture {
+    justify-content: flex-end;
+    width: 80px;
+  }
+  .logement-collapse {
+    flex-direction: column;
+    margin: 0;
+    margin-right: 20px;
+  }
+  .logement-collapse .accordion-title {
+    font-size: 13px;
+    padding: 6px 12px;
+    width: 100%;
+  }
+  .logement-collapse .accordion-content {
+    width: 98%;
+  }
+}
+@media screen and (768px <= width <= 992px) {
+  .logement-collapse {
+    flex-direction: column;
+    width: 850px;
+    margin: 0 20px;
+  }
+  .logement-collapse .accordion-title {
+    font-size: 13px;
+    padding: 6px 12px;
+    width: 100%;
+  }
+  .logement-collapse .accordion-content {
+    width: 100%;
+  }
+  .logement-rating {
+    margin-top: 5px;
+  }
+  .logement-info h1 {
+    margin: 0;
+    font-size: 20px;
+  }
+  .logement-info h2 {
+    font-size: 16px;
+  }
+  .container-logement-info {
+    width: 95%;
+    margin: 0 20px;
+  }
+}
+@media screen and (992px <= width <= 1240px) {
+  .logement-collapse {
+    width: auto;
+    margin: 0 20px;
+  }
+  .logement-collapse .accordion-title {
+    font-size: 13px;
+    padding: 6px 12px;
+    width: 100%;
+  }
+  .logement-collapse .accordion-content {
+    width: 100%;
+  }
+  .container-logement-info {
+    width: 94%;
+    margin: 0 20px;
+  }
+}
+.footer-banner-image .banner {
+  width: 90%;
+  height: 223px;
+}
+
+@media screen and (768px <= width <= 992px) {
+  .footer-banner-image .banner {
+    width: 95%;
+    margin-bottom: 20px;
+  }
+}
+.section-slider {
+  max-width: 1240px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.slider {
+  height: 415px;
+  width: 100%;
+}
+
+.slider-image {
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  align-items: center;
+  height: 415px;
+  border-radius: 25px;
+  background-position: center;
+  object-fit: cover;
+}
+
+.arrow {
+  font-size: 10rem;
+  color: #ffffff;
+  z-index: 10;
+  cursor: pointer;
+}
+
+.slide-number {
+  display: flex;
+  justify-content: center;
+  color: #ffffff;
+  font-size: 18px;
+  margin-top: 350px;
+}
+
+.mayBeHide {
+  display: none;
+}
+
+@media screen and (768px >= width) {
+  .section-slider {
+    height: 255px;
+    margin: 0 20px;
+  }
+  .slider {
+    height: 100%;
+  }
+  .slider-image {
+    width: 100%;
+    height: 225px;
+    border-radius: 10px;
+    background-position: center;
+    object-fit: cover;
+    background-size: cover;
+  }
+  .arrow {
+    font-size: 2rem;
+  }
+  .slide-number {
+    display: none;
+  }
+}
+@media screen and (768px <= width <= 992px) {
+  .section-slider {
+    width: 100%;
+    height: 225px;
+  }
+  .slider {
+    width: 100%;
+    height: 225px;
+    margin: 0 20px;
+  }
+  .slider-image {
+    width: 100%;
+    height: 225px;
+    border-radius: 10px;
+    background-position: center;
+    object-fit: cover;
+    background-size: cover;
+  }
+  .arrow {
+    font-size: 2rem;
+  }
+  .slide-number {
+    display: none;
+  }
+}
 .accordion {
   margin: 0 auto;
   max-width: 1120px;
@@ -167,6 +637,7 @@ body {
 }
 
 .accordion-title {
+  width: auto;
   height: 15px;
   font-weight: 500;
   font-weight: bold;
@@ -185,11 +656,11 @@ body {
 
 .accordion-content {
   visibility: hidden;
-  height: auto;
   opacity: 0;
   overflow: hidden;
   padding: 0 1rem;
   transition: all 0.15s ease-in;
+  display: none;
 }
 
 .active .accordion-content {
@@ -224,14 +695,48 @@ body {
   flex-direction: column;
   width: auto;
   justify-content: flex-start;
+  margin-bottom: 30px;
 }
 
 .collapse-container div {
   border-radius: 10px;
 }
 
+@media screen and (768px >= width) {
+  .accordion {
+    width: 90%;
+    margin: 0 20px;
+    margin-bottom: 347px;
+  }
+  .collapse-container {
+    height: auto;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  .accordion-title {
+    padding: 6px 12px;
+    font-size: 13px;
+  }
+}
+@media screen and (768px <= width <= 992px) {
+  .accordion {
+    width: 96%;
+    margin: 0 20px;
+    margin-bottom: 20px;
+  }
+  .accordion-title {
+    padding: 6px 12px;
+    font-size: 13px;
+  }
+}
+@media screen and (992px <= width <= 1200px) {
+  .accordion {
+    height: auto;
+    margin-top: 32px;
+  }
+}
 .footer {
-  width: auto;
+  width: 100%;
   height: 160px;
   background-color: #000000;
   display: flex;
@@ -241,7 +746,7 @@ body {
 }
 
 .footer-text {
-  width: 513px;
+  width: 100%;
   height: 46px;
   font-size: 24px;
   color: #ffffff;
@@ -257,38 +762,49 @@ body {
   filter: brightness(5);
 }
 
+@media screen and (280px <= width <= 992px) {
+  .footer-text {
+    font-size: 12px;
+  }
+}
 .error {
-  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #FF6060;
+  margin: 15% auto;
 }
 
 .error_title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 264px;
   font-size: 288px;
-  font-weight: 700;
-  color: #FF6060;
-  margin-top: 166px;
-  margin-bottom: 58px;
+  margin: 0 auto;
 }
 
 .error_text {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 154px;
   font-size: 36px;
-  width: auto;
-  height: 52px;
-  color: #FF6060;
-  margin-bottom: 168px;
 }
 
 .errorBack {
-  font-size: 18px;
   color: #FF6060;
-  text-decoration: underline;
-  padding-bottom: 25px;
+  margin-bottom: 130px;
+}
+
+@media screen and (768px >= width) {
+  .error {
+    margin-top: 195px;
+  }
+  .error_title {
+    font-size: 96px;
+  }
+  .error_text {
+    font-size: 18px;
+    margin: 0 15% 130px 15%;
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
