--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -96,8 +96,27 @@
   }  
 }
 
-@media screen and (993px <= width) {
+@media screen and (993px <= width <= 1200px) {
   .header {
     width: auto;
+    height: 60px;
+    margin: 40px;
+    list-style: none;
+    font-size: 16px;
+    align-items: normal;
+    a {
+      width: auto;
+      height: 17px;
+      margin-right: 10px;
+    }
+    .kasa-logo-img {
+      width: 180px;
+      height: 56px;
+    } 
+  } 
+
+  .nav-bar {
+    align-items: center;
   }
-}
+} 
+
