--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,11 +54,11 @@ body {
   cursor: pointer;
 }
 
-@media screen and (280px <= width <= 375px) {
+@media screen and (280px <= width <= 386px) {
   .header {
-    width: 88%;
+    width: auto;
     margin: 20px;
-    justify-content: center;
+    justify-content: space-between;
   }
   .nav-bar {
     flex-direction: column;
@@ -79,7 +79,7 @@ body {
 }
 @media screen and (376px <= width <= 768px) {
   .header {
-    width: 93.5%;
+    width: auto;
     margin: 20px;
   }
   .header ul {
@@ -101,15 +101,10 @@ body {
 @media screen and (769px <= width <= 992px) {
   .header {
     width: auto;
-    height: 47px;
+    height: 74px;
     margin: 20px;
     list-style: none;
     font-size: 16px;
-  }
-  .header a {
-    width: auto;
-    height: 17px;
-    margin-right: 10px;
   }
   .kasa-logo-img {
     width: 145px;
@@ -136,6 +131,12 @@ body {
   }
   .nav-bar {
     align-items: center;
+  }
+}
+@media screen and (1200px <= width) {
+  .header {
+    width: auto;
+    margin: 40px;
   }
 }
 .kasa-body {
