--- a/src/sass/_apropos.scss
+++ b/src/sass/_apropos.scss
@@ -1,18 +1,41 @@
 .footer-banner-image {
   .banner {
-    width: 90%;
+    width: 100%;
     height: 223px;
   }
 }
 
-@media screen and (280px <= width <= 445px) {
-    
+@media screen and (376px <= width <= 768px) {
+  .footer-banner-image {
+    .banner {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
 }
 
-@media screen and (768px <= width <= 992px) {
+@media screen and (769px <= width <= 992px) {
   .footer-banner-image {
     .banner {
       width: 95%;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+@media screen and (993px <= width <= 1200px) {
+  .footer-banner-image {
+    .banner {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
+} 
+
+@media screen and (1201px <= width <= 1239px) {
+  .footer-banner-image {
+    .banner {
+      width: 100%;
       margin-bottom: 20px;
     }
   }
