--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,9 +28,9 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1240px;
   margin: 40px auto 0 auto;
   width: 100%;
+  max-width: 1240px;
 }
 
 .kasa-logo-img {
@@ -133,7 +133,7 @@ body {
     align-items: center;
   }
 }
-@media screen and (1200px <= width) {
+@media screen and (1201px <= width <= 1239px) {
   .header {
     width: auto;
     margin: 40px;
@@ -223,7 +223,7 @@ body {
     object-fit: cover;
   }
 }
-@media screen and (768px <= width <= 992px) {
+@media screen and (769px <= width <= 992px) {
   .banner {
     width: 96%;
     height: 111px;
@@ -237,16 +237,29 @@ body {
     transform: translate(-50%, -50%);
   }
 }
-@media screen and (992px <= width <= 1200px) {
+@media screen and (993px <= width <= 1200px) {
   .banner {
-    height: 111px;
+    height: 223px;
     margin: 0 40px;
   }
   .banner-text {
-    width: auto;
-    font-size: 26px;
+    width: 90%;
+    font-size: 48px;
     top: 50%;
-    left: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+  }
+}
+@media screen and (1201px <= width <= 1239px) {
+  .banner {
+    height: 223px;
+    margin: 0 40px;
+  }
+  .banner-text {
+    width: 90%;
+    font-size: 48px;
+    top: 50%;
+    left: 62%;
     transform: translate(-50%, -50%);
   }
 }
@@ -545,13 +558,31 @@ body {
   }
 }
 .footer-banner-image .banner {
-  width: 90%;
+  width: 100%;
   height: 223px;
 }
 
-@media screen and (768px <= width <= 992px) {
+@media screen and (376px <= width <= 768px) {
+  .footer-banner-image .banner {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (769px <= width <= 992px) {
   .footer-banner-image .banner {
     width: 95%;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (993px <= width <= 1200px) {
+  .footer-banner-image .banner {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (1201px <= width <= 1239px) {
+  .footer-banner-image .banner {
+    width: 100%;
     margin-bottom: 20px;
   }
 }
