App.css upgraded

--- a/src/sass/_apropos.scss
+++ b/src/sass/_apropos.scss
@@ -5,6 +5,11 @@
   }
 }
 
+@media screen and (280px <= width <= 386px) {
+
+
+}
+
 @media screen and (376px <= width <= 768px) {
   .footer-banner-image {
     .banner {
