--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -680,7 +680,7 @@ body {
 .accordion {
   margin: 0 auto;
   max-width: 1120px;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -689,9 +689,8 @@ body {
   width: auto;
   height: 15px;
   font-weight: 500;
-  font-weight: bold;
   font-size: 24px;
-  padding: 25px;
+  padding: 16px;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -751,26 +750,43 @@ body {
   border-radius: 10px;
 }
 
-@media screen and (768px >= width) {
+@media screen and (280px <= width <= 375px) {
   .accordion {
-    width: 90%;
+    margin: 0 10px;
+    margin-bottom: 230px;
+  }
+  .collapse-container {
+    width: 88%;
     margin: 0 20px;
-    margin-bottom: 347px;
+    margin-bottom: 20px;
+  }
+  .accordion-title {
+    padding: 6px 12px;
+    font-size: 13px;
+  }
+}
+@media screen and (376px <= width <= 768px) {
+  .accordion {
+    margin: 0 20px;
+    margin-bottom: 215px;
   }
   .collapse-container {
     height: auto;
     margin-bottom: 20px;
-    width: 100%;
   }
   .accordion-title {
     padding: 6px 12px;
     font-size: 13px;
   }
 }
-@media screen and (768px <= width <= 992px) {
+@media screen and (769px <= width <= 992px) {
   .accordion {
-    width: 96%;
+    width: auto;
     margin: 0 20px;
+    margin-bottom: 190px;
+  }
+  .collapse-container {
+    height: auto;
     margin-bottom: 20px;
   }
   .accordion-title {
@@ -778,9 +794,17 @@ body {
     font-size: 13px;
   }
 }
-@media screen and (992px <= width <= 1200px) {
+@media screen and (993px <= width <= 1200px) {
   .accordion {
     height: auto;
+    width: 85%;
+    margin-bottom: 64px;
+  }
+}
+@media screen and (1201px <= width <= 1239px) {
+  .accordion {
+    height: auto;
+    width: 85%;
     margin-top: 32px;
   }
 }
