--- a/src/sass/_slideshow.scss
+++ b/src/sass/_slideshow.scss
@@ -42,17 +42,15 @@
   display: none;
 }
 
-@media screen and (768px >= width) {
+@media screen and (280px <= width <= 375px) {
   .section-slider {
-    height: 255px;
-    margin: 0 20px;
+    width: 100%;
+    height: 225px;
   }
-
   .slider {
-    height: 100%;
-    // margin-bottom: 15px;
+    width: 90%;
+    height: 225px;
   }
-
   .slider-image {
     width: 100%;
     height: 225px;
@@ -61,28 +59,24 @@
     object-fit: cover;
     background-size: cover;
   }
-
   .arrow {
     font-size: 2rem;
-  }
-  
+  }  
   .slide-number {
     display: none;
   }
 }
 
-@media screen and (768px <= width <= 992px) {
+@media screen and (376px <= width <= 992px) {
   .section-slider {
     width: 100%;
     height: 225px;
   }
-
   .slider {
     width: 100%;
     height: 225px;
     margin: 0 20px;
   }
-
   .slider-image {
     width: 100%;
     height: 225px;
@@ -91,12 +85,37 @@
     object-fit: cover;
     background-size: cover;
   }
-
   .arrow {
     font-size: 2rem;
-  }
-  
+  }  
   .slide-number {
     display: none;
   }
+}
+
+@media screen and (993px <= width <=1239px) {
+  .section-slider {
+    width: auto;
+    height: 415px;
+    margin: 0 40px;
+  }
+  .slider {
+    width: 100%;
+    height: 415px;
+  }
+  .slider-image {
+    width: 100%;
+    height: 415px;
+    border-radius: 10px;
+    background-position: center;
+    object-fit: cover;
+    background-size: cover;
+  } 
+  .arrow {
+    font-size: 5rem;
+  }  
+}
+
+@media screen and (1201px <= width <= 1239px) {
+
 }
