--- a/src/sass/_error.scss
+++ b/src/sass/_error.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   color: #FF6060;
-  margin: 15% auto;
+  margin: 20px auto;
 }
 
 .error_title {
@@ -15,13 +15,13 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  margin-bottom: 154px;
+  margin-bottom: 106px;
   font-size: 36px;
 }
 
 .errorBack {
   color:#FF6060;
-  margin-bottom: 130px;
+  margin-bottom: 100px;
 }
 
 @media screen and (768px >= width) {
