--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -8,6 +8,10 @@
   box-sizing: inherit;
 }
 
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0 auto;
   padding: 0;
@@ -19,5 +23,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
+  flex-grow: 1;  
+  height: 100%;
+}
+
+.main-container {
+  max-width: 1240px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  flex: 1 1;
   flex-grow: 1;
 }
