--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,7 +6,6 @@
   align-items: center;
   margin: 40px auto 0 auto;
   width: 100%;
-  max-width: 1240px;
 }
 
 .kasa-logo-img {
@@ -14,13 +13,13 @@
 }
 
 .nav-bar {
-  padding-left: 32px;
   list-style: none;
   display: flex;
   font-size: 24px;
   a {
     height: 34px;
-    width: 136px;
+    width: auto;
+    margin-left: 57px;
     text-decoration: none;
     color:#FF6060;
     :hover {
@@ -30,12 +29,13 @@
   }    
 }
 
-@media screen and (280px <= width <= 386px) {
+@media screen and (280px <= width <= 334px) {
   .header {
     width: auto;
     margin: 20px;
     justify-content: space-between;
   }
+
   .nav-bar {
     flex-direction: column;
     font-size: 12px;
@@ -46,6 +46,7 @@
       align-items: center;
     }
   }
+
   .kasa-logo-img {
     width: 90%;
     height: auto;
@@ -54,27 +55,31 @@
   }
 }
 
-@media screen and (376px <= width <= 768px) {
+@media screen and (335px <= width <= 768px) {
   .header {
-    width: auto;
+    align-items: center;
     margin: 20px;
-    
-    ul {
-      margin: 0;
-      a {
-        margin-left: 10px;
-        font-size: 18px;
-      }
-    }
-    a {
-      width: auto;
-      height: 100%;
-    }
-  }  
+    width: auto;
+  }
+  
   .kasa-logo-img {
-    width: 145px;
-    height: 100%;
-  }  
+    height: 38px;
+  }
+  
+  .nav-bar {
+    list-style: none;
+    display: flex;
+    font-size: 12px;
+    a {
+      height: 34px;
+      width: auto;
+      margin-left: 10px;
+      :hover {
+        border-bottom: 2px solid #FF6060;
+        cursor: pointer;
+      }
+    }    
+  }
 }
 
 @media screen and (769px <= width <= 992px) {
@@ -82,12 +87,11 @@
     width: auto;
     height: 74px;
     margin: 20px;
-    list-style: none;
     font-size: 16px;
   }  
   .kasa-logo-img {
-    width: 145px;
-    height: 47px;
+    width: auto;
+    height: 100%;
   }  
 }
 
@@ -120,4 +124,3 @@
     margin: 40px;
   }
 }
-
