--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,9 +1,3 @@
-.container {
-  max-width: 1240px;
-  height: auto;
-  margin: 0 auto;
-}
-
 .gallery {
   display: flex;
   flex-direction: row;
@@ -62,35 +56,42 @@
   width: 100%;
 }
 
-@media screen and (768px >= width) {
+@media screen and (280px <= width <= 400px) {
   .images_gallery {
     background-color: #ffffff;
-    justify-content: space-evenly;
-    border-radius: 25px;
+    margin: 0 20px;
     padding: 0;
-    margin: 0;
     a {
-      width: 94%;
-      height: 255px;
-      margin: 0 20px 20px 20px;
+      width: 100%;
+      height: 340px;
+      margin: 10px;
     }
-  }
+  }  
 }
 
-@media screen and (768px <= width <= 992px) {
+@media screen and (401px <= width <= 768px) {
   .images_gallery {
     background-color: #ffffff;
+    margin-top: 10px;
+    padding: 0;
     a {
-      height: 255px;
-      margin: 20px;
+      width: 100%;
+      height: 340px;
+      margin: 10px 20px;
     }
-  }
+  } 
+}
 
-  .key-box {
-    width: auto;
-  }
+@media screen and (769px <= width <= 992px) { 
+  .images_gallery {
+    margin: 0 20px;
+    margin-top: 20px;
+  } 
+}
 
-  .kasa-body {
-    width: 100%;
-  }
+@media screen and (993px <= width <= 1200px) {
+  .images_gallery {
+    margin: 0 40px;
+    margin-top: 40px;
+  } 
 }
